# optimus

./: .env.example  .gitignore  .release-please-manifest.json  Cargo.toml  Makefile  README.md  release-please-config.json
build-mod/: Cargo.toml
build-mod/src/: lib.rs
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/proto/: core.proto
events/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  substream_config.json
events/abi/: uniswap_v2_factory.json  uniswap_v2_pair.json  uniswap_v3_factory.json
events/configs/: erc20.json  odos.json  substreams_template.yaml  uniswap_v2_config.json  uniswap_v2_polygon.yaml  uniswap_v3_config.json
events/src/: db.rs  events.rs  lib.rs
forwarder/: Cargo.toml  substreams.yaml
forwarder/src/: lib.rs
kuber/: Dockerfile  Makefile  commands.sh  persistent_claim.yaml  persistent_volume.yaml  substreams_sink_sql_pod.yaml
price/: Cargo.toml  build.rs  substreams.yaml
price/src/: lib.rs  price.rs
price/src/abi/: erc20.rs  factory.rs  pool.rs  positionmanager.rs
prices/: .gitignore  Cargo.toml  schema.sql  substreams.yaml
prices/proto/: price.proto
prices/src/: lib.rs
to-table-derive/: Cargo.toml
to-table-derive/src/: lib.rs
tx/: .env.example  Cargo.toml  README.md  schema.sql  substreams.yaml
tx/src/: lib.rs
uniswapx/: Cargo.toml  Makefile  build.rs  schema.sql  substreams.yaml
uniswapx/proto/: uniswap-x.proto
uniswapx/src/: lib.rs  uniswap_structs.rs
uniswapx/src/abi/: dutch_order_executor.rs  mod.rs
uniswapx/src/pb/: ai.semiotic.uniswap.x.rs  mod.rs
uniswapx/tests/: decode.rs
