[package]
name = "optimus-events"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
description = "Substream package for contract events"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
ethabi.workspace = true
hex.workspace = true
num-bigint.workspace = true
prost.workspace = true
substreams.workspace = true
substreams-database-change.workspace = true
substreams-ethereum.workspace = true
getrandom = { version = "0.2", features = ["custom"] }
chrono = { version = "0.4.24", features = ["std"], default-features = false}
prost-types = "0.11.9"
to-table-derive = { path = "../to-table-derive" }
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow.workspace = true
ethabi.workspace = true
substreams-ethereum.workspace = true
serde = "1.0.0"
serde_json = "1.0.0"
build-mod = { path = "../build-mod" }
