[package]
name = "optimus-price"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
description = "Substream price"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
ethabi.workspace = true
hex.workspace = true
num-bigint.workspace = true
num-traits = "0.2"
phf = { version = "0.11.1", features = ["macros"] }
prost.workspace = true
prost-types.workspace = true
substreams.workspace = true
substreams-ethereum.workspace = true
substreams-database-change.workspace = true
substreams-entity-change.workspace = true
tiny-keccak = "2.0"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }


[build-dependencies]
prost-build = "0.11"
anyhow.workspace = true
substreams-ethereum.workspace = true